<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background" >
 
  <!-- Screen Design for the SONGS -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/testMessageScreenHeader"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />
    
     <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/mic_128x128" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
         android:text="@string/testMessageMatchingStatusLabel"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/black" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="170dp"
         android:layout_marginTop="-20dp"
         android:text="@string/testMessageMatchingStatusValue"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/black" />

      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="20dp"
          android:layout_marginTop="40dp"
          android:text="@string/testMessageMatchingCorrLabel"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/black" />
      
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="225dp"
         android:layout_marginTop="-20dp"
         android:text="@string/testMessageMatchingCorrValue"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="@color/black" />

</LinearLayout>