<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="1" android:background="@color/background"
	android:id = "@+id/gpsLayout">

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/gpsLocationScreenHeader"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

	<TableLayout
	    android:id="@+id/gpsTableLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="40dp" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:layout_marginTop="20dp"
	            android:paddingRight="10dp"
	            android:text="@string/gpsLocationLocality"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/black" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:layout_marginTop="20dp"
	            android:text="@string/gpsLocationCity"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/black" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:layout_marginTop="20dp"
	            android:text="@string/gpsLocationDistrict"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/black" />

	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:layout_marginTop="20dp"
	            android:text="@string/gpsLocationCountry"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/black" />

	    </TableRow>
	</TableLayout>

	<TextView
	    android:id="@+id/textView5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="30dp"
	    android:layout_marginTop="20dp"
	    android:text="@string/gpsLocationStatus"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="@color/black" />

</LinearLayout>
