<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" android:background="@color/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/welcome"
        android:textColor="@color/black" />

   <Button
       android:id="@+id/exit_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/about_button"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="18dp"
       android:text="@string/exit_label" />

   <Button
       android:id="@+id/about_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/exit_button"
       android:layout_alignLeft="@+id/imageView1"
       android:text="@string/about_label" />

   <ImageView
       android:id="@+id/imageView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/about_button"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="22dp"/>

</RelativeLayout>